# strum

./: .gitignore  .readthedocs.yaml  FUTURE_FEATURES.md  README.md  README_DOCS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: advanced-patterns.md  api-reference.md  basic-usage.md  error-handling.md  fastapi-integration.md  getting-started.md  index.md  json-parsing.md  regex-parsing.md
docs/user-guides/: best-practices.md  migration-guide.md  quick-reference.md  troubleshooting.md
scripts/: capture_example_outputs.py  test_examples.py
stringent/: __init__.py  parser.py
strum/: __init__.py  parser.py
tests/: __init__.py  test_docs_doctest.py  test_docs_examples.py  test_hypothesis.py  test_parser.py  test_readme_examples.py
